--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,15 @@ Make sure to learn what the starter code does!!
 @import url('https://fonts.googleapis.com/css2?family=Andika&display=swap');
 
 body{
-  color: #000000;
-  font-size: 16px;
-  margin: 1.2em;
-  font-family: 'Andika', sans-serif;
-  background-image: url("images/pigeon-background.jpg");
+  background-image: url("../images/pigeon-background.jpeg");
   background-color: #dddddd;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  color: #000000;
+  font-size: 16px;
+  margin: 1.2em;
+  font-family: 'Andika', sans-serif;
 }
 
 main{
@@ -49,17 +49,18 @@ a{
 }
 
 table{
-  border-radius: 20px;
+  border-radius: 10px;
   margin: auto;
   text-align: center;
   border: 2px solid #000000;
 }
 
 .colhead{
-  background-color: #7e0830;
+  background-color: #7e0820;
   color: #FFFFFF;
   min-width: 125px;
   padding: 10px;
+  vertical-align: center;
   text-align: center;
   text-transform: uppercase;
 }
@@ -74,6 +75,7 @@ th, td{
   border-top: 2px solid #000000;
 }
 
+
 td{
 
 }
@@ -82,16 +84,24 @@ tr{
 
 }
 
-*{
-
+*:focus{
+border-width: 3px;
+border-style: dashed;
+border-color: #417243;
 }
 
-thead tr:first-child th:first-child{
-  border-top-left-radius: 20px;
+thead tr:first-child td:first-child {
+  border-top-left-radius: 10px;
+}
+thead tr:first-child td:last-child {
+  border-top-right-radius: 10px;
 }
 
-thead tr:first-child th:nth-child(11){
-  border-bottom-left-radius: 20px;
+tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
 }
 
 tr:nth-child(even) {background-color:#d1d1d1;}
@@ -99,9 +109,11 @@ tr:hover {background-color: rgba(126,8,32,0.25)}
 
 footer{
   width:100%;
+  min-height: 75px;
   background:#000000;
+  position: absolute;
+  bottom: 0;
+  left: 0;
   text-align:center;
   color: #FFFFFF;
-  min-height: 75px;
 }
-
