--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ table{
   color: #FFFFFF;
   min-width: 125px;
   padding: 10px;
+  margin: auto;
   vertical-align: center;
   text-align: center;
   text-transform: uppercase;
