--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
   background-color: #dddddd;
   background-size: cover;
   background-position: center;
+  vertical-align: middle;
   background-repeat: no-repeat;
   color: #000000;
   font-size: 16px;
@@ -61,7 +62,7 @@ table{
   min-width: 125px;
   padding: 10px;
   margin: auto;
-  vertical-align: center;
+  vertical-align: middle;
   text-align: center;
   text-transform: uppercase;
 }
@@ -76,29 +77,20 @@ th, td{
   border-top: 2px solid #000000;
 }
 
-
-td{
-
-}
-
-tr{
-
-}
-
 *:focus{
 border-width: 3px;
 border-style: dashed;
 border-color: #417243;
 }
 
-thead tr:first-child td:first-child {
+thead tr:first-child th:first-child {
   border-top-left-radius: 10px;
 }
-thead tr:first-child td:last-child {
+thead tr:first-child th:last-child {
   border-top-right-radius: 10px;
 }
 
-tbody tr:last-child td:first-child {
+tbody tr:last-child th:first-child {
   border-bottom-left-radius: 10px;
 }
 tbody tr:last-child td:last-child {
@@ -118,4 +110,3 @@ footer{
   text-align: center;
   color: #FFFFFF;
 }
-
